# notas-musicais

./: mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
docs/: index.md
notas_musicais/: acordes.py  cli.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
