[tool.poetry]
name = "notas-musicais"
version = "0.1.0"
description = ""
authors = ["Victor Gonçalves"]
readme = "README.md"
packages = [{include = "notas_musicais"}]

[tool.poetry.scripts]
notas-musicais = "notas_musicais.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.2.2"
isort = "^5.12.0"
blue = "^0.9.1"
taskipy = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.20.0"
mkdocs-material = "^9.1.3"
mkdocstrings-python = "^0.8.3"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=notas_musicais -vv"
post_test = "coverage html"